fix: [Composer] Revert .ChatFooter's z-index

--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -302,8 +302,8 @@
 @zindex-recorder-toast: 100;
 @zindex-rate-actions: @zindex-modal;
 @zindex-navbar: 10;
+@zindex-footer: 10;
 @zindex-quick-replies: 110;
-@zindex-footer: 100;
 @zindex-notice: 30;
 
 @zindex-input-counter: 1;
